# GameOfLife

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/: game.cpp  game.h  terminal_config.cpp  terminal_config.h
src/board/: board.cpp  board.h
